test_suite/tests/ui/fail/invalid_attr_value_for_arg/invalid_arg_arg.rs
use clapi::macros::*;

#[command]
#[arg(x, arg=123)]
fn app(x: i64){}

fn main(){}